fix: add classic width/overflow in container

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -177,6 +177,8 @@
   //================================================
   .#{$prefix}--data-table-v2-container {
     min-width: rem(600px);
+    width: 100%;
+    overflow-x: auto;
     padding-top: $spacing-3xs; // allow space for focus styles
 
     .#{$prefix}--search-input {
